src/test/deca/codegen/invalid/read_int_error.ass
; Main Program
	TSTO #1
	BOV pile_pleine
	ADDSP #1
; start main program
; Main program
; Beginning of main instructions:
	RINT
	BOV erreur_lecture_int
	STORE R1, 1(GB)
	LOAD 1(GB), R1
	WINT
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
erreur_lecture_int:
	WSTR "Erreur : lecture d'un entier invalide"
	WNL
	ERROR
; end main program
